--- a/SpdProject/spdproject/templates/checksign.html
+++ b/SpdProject/spdproject/templates/checksign.html
@@ -152,21 +152,27 @@ if (birthmonth == 1&& birthday >= 20 || birthmonth == 2 && birthday <= 18
 </head>
 <body>
 
-<h3 align="center">ZODIACSIGN</h3>
+<h1 align="center" style="color:0C359E;">𝓩𝓸𝓭𝓲𝓪𝓬 𝓢𝓲𝓰𝓷</h1>
 <hr><hr>
 <style >
 body, html {
   height: 100%;
 }
 body {
-  background-image: url("https://static.tnn.in/thumb/msid-96387097,width-1280,height-720,resizemode-75/96387097.jpg");
-    height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    background-image: url("https://img.freepik.com/free-vector/blank-blue-halftone-background_53876-99003.jpg?w=1060&t=st=1709992302~exp=1709992902~hmac=d84375494c09bade3e2691fc5375287eaa51414e7f6d002a9edf8346a676635f");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed; /* Add this line */
+    color: #1C5188;
 }
+
+
     nav {
   background-color: #333; /* change the background color to your desired color */
   overflow: hidden;
@@ -178,7 +184,10 @@ nav ul {
   list-style: none;
   display: flex;
   justify-content: center;
+  padding-top: 0px; /* Adjust the top padding */
+  padding-bottom: 0px; /* Adjust the bottom padding */
 }
+
 
 nav li {
   margin: 0;
@@ -212,9 +221,9 @@ nav a:hover {
 <br><br>
 
 <div id = "box">
-<h1> What is your constellation sign ?</h1>
+<h1 style="color:0C359E;"> What is your constellation sign ?</h1>
 </div>
-<h2> Enter your birthday. </h2>
+<h2 style="color:0C359E;"> Enter your birthday. </h2>
 <p>Month:<input type="number" id="month" min="1" max="12" ></p>
 <p> Day:<input type="number" id="day" min="1" max="31"></p>
 <a id="animated" onclick="zodiac()"  class="button">Find your zodiac sign! </a>
