--- a/SpdProject/spdproject/templates/regsuccess.html
+++ b/SpdProject/spdproject/templates/regsuccess.html
@@ -17,7 +17,7 @@ body, html {
   height: 100%;
 }
 body {
-  background-image: url("https://images.unsplash.com/photo-1579546929518-9e396f3cc809?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D");
+  background-image: url("https://www.zodiacsign.com/images/believe-in-astrology.png");
     height: 100%;
 
   /* Center and scale the image nicely */
