--- a/SpdProject/spdproject/templates/userhome.html
+++ b/SpdProject/spdproject/templates/userhome.html
@@ -13,14 +13,14 @@
 </head>
 <body>
 
-<h3 align="center">ASTROLOGY MANAGEMENT SYSTEM</h3>
+<h3 align="center" style="color:#FEE190;">ASTROLOGY MANAGEMENT SYSTEM</h3>
 <hr><hr>
 <style >
 body, html {
   height: 100%;
 }
 body {
-  background-image: url("https://images.unsplash.com/photo-1579546929518-9e396f3cc809?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D");
+  background-image: url("https://www.zodiacsign.com/images/believe-in-astrology.png");
     height: 100%;
 
   /* Center and scale the image nicely */
@@ -67,13 +67,15 @@ nav a:hover {
 
         <li><a href="{% url 'zodiacsign' %}">Horoscope</a>&nbsp;&nbsp;</li>
         <li><a href="{% url 'userlogout' %}">Logout</a>&nbsp;&nbsp;</li>
+        <li><a href="{% url 'feedback' %}">feedback</a>&nbsp;</li>
+        <li><a href="{% url 'initiate_payment' %}">payment</a></li>
 
          </ul>
 </nav>
 <br><br>
 
-<h1>Login Successfull</h1>
-<h2>
+<h1 align="center" style="color: #FEE190;">Login Successfull</h1>
+<h2 align="center" style="color:#FEE190; ">
     You can check your zodiac sign now!
     <br>
 
